use java 21 clamp size and maxPages parameters